--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,11 @@ nav .brand-logo {
 }
 
 .title-name{
-	font-size: 1.7rem;
-	font-weight: 300;
+	font-size: 2.5rem;
+	font-weight: 500;
 	margin-bottom: .4rem;
+	color: white;
+	text-shadow: 2px 2px 2px black;
 }
 .h1{
 	font-weight: 400;
@@ -31,6 +33,9 @@ nav .brand-logo {
 .h1-margin {
 	margin-top: 2rem;
 	margin-bottom: 1rem;
+}
+.h1-highlight{
+	text-shadow: 0 0 10px white;
 }
 .h2{
 	font-weight: 300;
@@ -59,7 +64,7 @@ nav .brand-logo {
 	display: none;
 }
 
-#habilidades .container {
+#habilidades .container , #portifolio .container {
 	width: 90%;
 }
 
@@ -72,4 +77,10 @@ nav .brand-logo {
 }
 .side-nav h4{
 	color: black;
+}
+.gradient-footer{
+	background-image: linear-gradient(to bottom, #f5f5f5 , #bdbdbd);
+}
+.gradient-habilidades{
+	background-image: linear-gradient(#eeeeee , #bdbdbd  , #eeeeee);
 }
