--- a/css/style.css
+++ b/css/style.css
@@ -23,19 +23,20 @@ nav .brand-logo {
 	font-size: 2.5rem;
 	font-weight: 500;
 	margin-bottom: .4rem;
-	color: white;
-	text-shadow: 2px 2px 2px black;
+	color: black;
+	text-shadow: 2px 2px 2px white;
 }
 .h1{
 	font-weight: 400;
 	font-size: 3rem;
 }
 .h1-margin {
-	margin-top: 2rem;
+	padding-top: 3rem;
 	margin-bottom: 1rem;
 }
 .h1-highlight{
-	text-shadow: 0 0 10px white;
+	color: white;
+	text-shadow: 2px 2px 2px black;
 }
 .h2{
 	font-weight: 300;
